# template-switch-aligner

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
generic_a_star/: Cargo.toml
generic_a_star/src/: closed_lists.rs  comparator.rs  cost.rs  lib.rs  open_lists.rs  reset.rs
generic_a_star/src/cost/: mod.rs
generic_a_star/src/open_lists/: linear_heap.rs
lib_ts_chainalign/: Cargo.toml
lib_ts_chainalign/src/: alignment.rs  anchors.rs  chain_align.rs  chaining_cost_function.rs  chaining_lower_bounds.rs  costs.rs  exact_chaining.rs  lib.rs  lower_bounds.rs  panic_on_extend.rs
lib_ts_chainalign/src/alignment/: coordinates.rs  sequences.rs  ts_kind.rs
lib_ts_chainalign/src/anchors/: index.rs  kmer_matches.rs  kmers.rs  primary.rs  reverse_lookup.rs  secondary.rs  tests.rs
lib_ts_chainalign/src/chain_align/: chainer.rs  evaluation.rs  performance_parameters.rs
lib_ts_chainalign/src/chain_align/chainer/: closed_list.rs  max_successors_iterator.rs
lib_ts_chainalign/src/chaining_cost_function/: cost_array.rs  tests.rs
lib_ts_chainalign/src/chaining_lower_bounds/: cost_array.rs  gap_affine.rs  ts_jump.rs
lib_ts_chainalign/src/chaining_lower_bounds/gap_affine/: algo.rs  tests.rs
lib_ts_chainalign/src/chaining_lower_bounds/ts_jump/: tests.rs
lib_ts_chainalign/src/costs/: compat.rs
lib_ts_chainalign/src/exact_chaining/: gap_affine.rs  ts_12_jump.rs  ts_34_jump.rs
lib_ts_chainalign/src/exact_chaining/gap_affine/: algo.rs  tests.rs
lib_ts_chainalign/src/exact_chaining/ts_12_jump/: algo.rs  tests.rs
lib_ts_chainalign/src/exact_chaining/ts_34_jump/: algo.rs  tests.rs
lib_ts_chainalign/src/gap_filling/: gap_affine.rs
lib_ts_chainalign/src/gap_filling/gap_affine/: algo.rs  tests.rs
lib_ts_chainalign/src/lower_bounds/: gap_affine.rs  ts_jump.rs
lib_ts_chainalign/src/lower_bounds/gap_affine/: algo.rs  tests.rs
lib_ts_chainalign/src/lower_bounds/ts_jump/: tests.rs
lib_tsalign/: Cargo.toml
lib_tsalign/src/: a_star_aligner.rs  alignment_configuration.rs  alignment_matrix.rs  config.rs  costs.rs  error.rs  io.rs  lib.rs  tests.rs
lib_tsalign/src/a_star_aligner/: alignment_geometry.rs  alignment_result.rs  configurable_a_star_align.rs  gap_affine_edit_distance.rs  mod.rs  template_switch_distance.rs  tests.rs
lib_tsalign/src/a_star_aligner/alignment_result/: a_star_sequences.rs  alignment.rs  mod.rs
lib_tsalign/src/a_star_aligner/alignment_result/alignment/: iter.rs  stream.rs  template_switch_specifics.rs
lib_tsalign/src/a_star_aligner/gap_affine_edit_distance/: mod.rs
lib_tsalign/src/a_star_aligner/template_switch_distance/: alignment_type.rs  context.rs  display.rs  identifier.rs  mod.rs  strategies.rs
lib_tsalign/src/a_star_aligner/template_switch_distance/alignment_type/: equal_cost_range.rs  mod.rs
lib_tsalign/src/a_star_aligner/template_switch_distance/context/: mod.rs
lib_tsalign/src/a_star_aligner/template_switch_distance/display/: mod.rs
lib_tsalign/src/a_star_aligner/template_switch_distance/lower_bounds/: mod.rs  template_switch.rs  template_switch_alignment.rs
lib_tsalign/src/a_star_aligner/template_switch_distance/strategies/: chaining.rs  mod.rs  node_ord.rs  primary_match.rs  primary_range.rs  secondary_deletion.rs  shortcut.rs  (+3 more)
lib_tsalign/src/a_star_aligner/tests/: mod.rs
lib_tsalign/src/alignment_configuration/: mod.rs
lib_tsalign/src/alignment_matrix/: mod.rs
lib_tsalign/src/alignment_matrix/index/: iterators.rs
lib_tsalign/src/config/: io.rs  mod.rs
lib_tsalign/src/config/io/: mod.rs
lib_tsalign/src/cost/: mod.rs
lib_tsalign/src/cost_table/: mod.rs
lib_tsalign/src/cost_table/io/: mod.rs
lib_tsalign/src/costs/: cost_function.rs  gap_affine.rs  mod.rs
lib_tsalign/src/costs/cost/: mod.rs
lib_tsalign/src/costs/cost_function/: io.rs  mod.rs
lib_tsalign/src/costs/gap_affine/: io.rs  mod.rs
lib_tsalign/src/deterministic_default_hasher/: mod.rs
lib_tsalign/src/error/: mod.rs
lib_tsalign/src/io/: mod.rs
lib_tsalign/src/score/: mod.rs
lib_tsalign/src/template_switch_lower_bound/: mod.rs
lib_tsshow/: Cargo.toml
lib_tsshow/src/: error.rs  lib.rs  multipair_alignment_arrangement.rs  plain_text.rs  svg.rs  ts_arrangement.rs
lib_tsshow/src/multipair_alignment_arrangement/: alignment.rs  builder.rs  coordinates.rs  sequence.rs
lib_tsshow/src/plain_text/: alignment_stream.rs  mutlipair_alignment_renderer.rs  parse_template_switches.rs
lib_tsshow/src/plain_text/mutlipair_alignment_renderer/: tests.rs
lib_tsshow/src/svg/: arrows.rs  font.rs  indexed_str.rs  labelled_sequence.rs  numbers.rs  offset_shift.rs
lib_tsshow/src/svg/font/: sans_serif_mono.rs  typewriter.rs
lib_tsshow/src/ts_arrangement/: character.rs  complement.rs  index_types.rs  inner.rs  row.rs  source.rs  template_switch.rs
python_bindings/: BUILD.md  Cargo.toml  README.md  pyproject.toml
python_bindings/python/tsalign/: __init__.py  _types.py
python_bindings/src/: lib.rs
seed_chain/: Cargo.toml
seed_chain/src/: chain.rs  lib.rs  seed.rs
seed_chain/src/chain/: context.rs  display.rs  mod.rs  node.rs
seed_chain/src/chain/context/: mod.rs
seed_chain/src/chain/node/: display.rs  mod.rs
seed_chain/src/seed/: mod.rs
template-switch-aligner/: Cargo.toml
template-switch-aligner-cli/: Cargo.toml
template-switch-aligner/src/: lib.rs
template-switch-aligner/src/alignment_configuration/: mod.rs
template-switch-aligner/src/alignment_matrix/: mod.rs
template-switch-aligner/src/alignment_matrix/index/: mod.rs
tsalign/: Cargo.toml
tsalign-tests/: Cargo.toml
tsalign-tests/tests/: integration.rs  util.rs
tsalign/src/: align.rs  lib.rs  main.rs  preprocess.rs  show.rs  template_switch_distance_type_selectors.rs  util.rs
tsalign/src/align/: a_star_chain_ts.rs  fasta_parser.rs  template_switch_distance_type_selectors.rs
tsalign/src/show/: alignment_stream.rs  mutlipair_alignment_renderer.rs  parse_template_switches.rs  svg.rs
tsalign/src/show/mutlipair_alignment_renderer/: tests.rs
tsalign/src/show/svg/: font.rs
tsalign/src/template_switch_distance_type_selectors/: mod.rs
(+134 files in other folders)
