[workspace]

members = [
    "extend_map",
    "deterministic_default_hasher",
    "generic_a_star",
    "seed_chain",
    "lib_tsalign",
    "tsalign",
    "lib_tsshow",
]
resolver = "2"

package.license = "BSD-2-Clause"
package.edition = "2024"
package.rust-version = "1.85.1"
package.repository = "https://github.com/sebschmi/template-switch-aligner"

[workspace.dependencies]
serde = "1.0.219"
compact-genome = "12.2.0"
traitsequence = "8.1.2"
log = "0.4.27"
num-traits = "0.2.19"
