[workspace]

members = [
    "generic_a_star",
    "seed_chain",
    "lib_tsalign",
    "lib_tsshow",
    "tsalign",

    # Bindings
    "python_bindings",

    # Internal
    "tsalign-tests",
]
resolver = "2"

package.license = "BSD-2-Clause"
package.edition = "2024"
package.rust-version = "1.85.1"
package.repository = "https://github.com/sebschmi/template-switch-aligner"

[workspace.dependencies]
serde = "1.0.219"
compact-genome = "12.3.0"
traitsequence = "8.1.2"
log = "0.4.27"
num-traits = "0.2.19"

[profile.release]
debug = true
