[package]
name = "generic_a_star"
description = "A generic implementation of the A* algorithm"
version = "0.9.4"
edition.workspace = true
rust-version.workspace = true
license = "BSD-2-Clause"
repository.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
binary-heap-plus = "0.5.0"
deterministic_default_hasher = { version = "0.7.1", path = "../deterministic_default_hasher" }
num-traits.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
