[package]
name = "generic_a_star"
description = "A generic implementation of the A* algorithm"
version = "0.20.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
binary-heap-plus.workspace = true
num-traits.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
extend_map = "0.14.4"
compare = "0.1.0"
rustc-hash.workspace = true
log.workspace = true
