[package]
name = "lib_ts_chainalign"
description = "A chaining-based sequence-to-sequence aligner that accounts for template switches"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
generic_a_star = { version = "0.19.1", path = "../generic_a_star" }
lib_tsalign = { version = "0.19.1", path = "../lib_tsalign" }
ndarray = { version = "0.17.1", features = ["serde"] }
num-traits.workspace = true
serde.workspace = true
compact-genome.workspace = true
itertools = "0.14.0"
log.workspace = true
indicatif = "0.18.3"
