[package]
name = "lib_tsalign"
description = "A sequence-to-sequence aligner that accounts for template switches"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
version = "0.21.2"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
serde = [
    "dep:serde",
    "noisy_float/serde",
    "ndarray/serde",
    "generic_a_star/serde",
]

[dependencies]
compact-genome.workspace = true
traitsequence.workspace = true
ndarray = "0.17.1"
binary-heap-plus = "0.5.0"
nom = "8.0.0"
thiserror = "2.0.3"
num-traits.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
noisy_float = { version = "0.2.0" }
generic_a_star = { version = "0.21.2", path = "../generic_a_star" }
log.workspace = true
rustc-hash = "2.1.1"
seed_chain = { version = "0.21.2", path = "../seed_chain" }
extend_map = "0.14.3"
template-switch-error-free-inners = "0.1.1"
