[package]
name = "lib_tsshow"
description = "A visualiser for template-switch alignments"
license.workspace = true
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
version = "0.14.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
lib_tsalign = { version = "0.14.0", path = "../lib_tsalign" }
log.workspace = true
svg = "0.18.0"
resvg = "0.45.0"
thiserror = "2.0.12"
tagged-vec = "0.3.0"
strong-type = "0.12"
