[package]
name = "seed_chain"
description = "A seeding and generic chaining mechanism for sequence-to-sequence alignment"
license.workspace = true
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true


[dependencies]
compact-genome.workspace = true
log.workspace = true
generic_a_star = { version = "0.15.0", path = "../generic_a_star" }
num-traits.workspace = true
