[package]
name = "template-switch-aligner"
description = "A sequence-to-sequence aligner that accounts for template switches"
repository = "https://github.com/sebschmi/template-switch-aligner"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.80.1"

[dependencies]
compact-genome = "2.1.1"
traitsequence = "2.0.0"
ndarray = "0.16.1"
