[package]
name = "tsalign-tests"
license.workspace = true
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>", "Jasper Krauter <jasper.krauter@helsinki.fi>"]
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
tsalign = { version = "0.15.0", path = "../tsalign" }
clap = { version = "4.5.16", features = ["derive"] }
anyhow = "1.0.97"
