[package]
name = "tsalign"
description = "A sequence-to-sequence aligner that accounts for template switches"
license = "BSD-2-Clause"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
version = "0.8.9"
edition = "2024"
rust-version.workspace = true
repository.workspace = true

[dependencies]
lib_tsalign = { version = "0.12.0", path = "../lib_tsalign", features = [
    "serde",
] }
clap = { version = "4.5.16", features = ["derive"] }
compact-genome = { workspace = true, features = ["io"] }
traitsequence.workspace = true
serde.workspace = true
toml = "0.8.19"
log.workspace = true
simplelog = "0.12.2"
svg = "0.18.0"
