[package]
name = "tsalign"
description = "A sequence-to-sequence aligner that accounts for template switches"
license.workspace = true
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
version = "0.14.2"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
lib_tsalign = { version = "0.14.2", path = "../lib_tsalign", features = [
    "serde",
] }
lib_tsshow = { version = "0.14.2", path = "../lib_tsshow" }
clap = { version = "4.5.16", features = ["derive"] }
compact-genome = { workspace = true, features = ["io"] }
traitsequence.workspace = true
serde.workspace = true
toml = "0.8.19"
log.workspace = true
simplelog = "0.12.2"
anyhow = "1.0.97"
