[package]
name = "tsalign"
description = "A sequence-to-sequence aligner that accounts for template switches"
license.workspace = true
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
version = "0.21.2"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
lib_tsalign = { version = "0.21.2", path = "../lib_tsalign", features = [
    "serde",
] }
lib_ts_chainalign = { version = "0.3.2", path = "../lib_ts_chainalign" }
lib_tsshow = { version = "0.21.2", path = "../lib_tsshow" }
clap.workspace = true
compact-genome = { workspace = true, features = ["io"] }
traitsequence.workspace = true
serde.workspace = true
toml = "0.9.8"
log.workspace = true
simplelog = "0.12.2"
anyhow = "1.0.97"
utf8-chars = "3.0.5"
sha = "1.0.3"
bincode = { version = "2.0.1", features = ["serde"] }
